# AoC

./: .gitignore  CMakeLists.txt  README.md  fetch_input.sh
2024/day1/: part1.cpp  part2.cpp
2024/day10/: part1.cpp  part2.cpp
2024/day2/: part1.cpp  part2.cpp
2024/day3/: part1.cpp  part2.cpp
2024/day4/: part1.cpp  part2.cpp
2024/day5/: part1.cpp  part2.cpp
2024/day6/: part1.cpp  part2.cpp
utils/: helpers.cpp  helpers.h
